--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
       -webkit-font-smoothing:antialiased;
       text-rendering:optimizeLegibility;
     }
+    <body>
+  <canvas id="ocean-net" aria-hidden="true"></canvas>
+  <section class="hero">
     <section class="hero">
   <picture>
   <source srcset="assets/hero.webp" type="image/webp">
@@ -308,7 +311,6 @@
   justify-content:center;
   margin-top:12px;
 }
-<canvas id="ocean-net" aria-hidden="true"></canvas>
 #reflect-in{
   width:min(720px,92vw);
   background:#0f1a28;
