--- a/index.html
+++ b/index.html
@@ -180,6 +180,30 @@
       box-shadow:0 0 24px #7fc4ffaa, 0 0 60px #2b84ff66;
       animation:throb 4.5s ease-in-out infinite;
     }
+    /* Neon aura upgrades */
+.cta, .cta.ghost, .brand, .orb {
+  position: relative;
+  isolation: isolate;
+}
+
+.cta::before, .cta.ghost::before, .brand::before, .orb::before {
+  content:""; 
+  position:absolute; inset:-6px;
+  border-radius: inherit;
+  filter: blur(18px);
+  background:
+    radial-gradient(40% 60% at 20% 30%, #2b84ff66 0%, transparent 60%),
+    radial-gradient(60% 40% at 80% 70%, #76c7ff55 0%, transparent 60%);
+  opacity:.85;
+  z-index:-1;
+  pointer-events:none;
+  transition: opacity .25s ease, filter .25s ease;
+}
+
+.cta:hover::before, .cta.ghost:hover::before, .brand:hover::before, .orb:hover::before {
+  filter: blur(24px);
+  opacity:1;
+}
     @keyframes throb{0%,100%{transform:scale(1)}50%{transform:scale(1.07)}}
 
     .cta{
