--- a/index.html
+++ b/index.html
@@ -367,6 +367,17 @@
   }
   50% {
     box-shadow: 0 0 18px rgba(43,132,255,0.4), inset 0 6px 22px rgba(0,0,0,.25);
+@keyframes ambientGlow {
+  0%, 100% { 
+    box-shadow: 0 0 0 rgba(43,132,255,0); 
+  }
+  50% { 
+    box-shadow: 0 0 90px rgba(43,132,255,.18) inset; }
+}
+
+.hero, .section-dark, .poster {
+  animation: ambientGlow 6s ease-in-out infinite;
+}
   }
 }
 
