--- a/index.html
+++ b/index.html
@@ -229,6 +229,20 @@
 @media (prefers-reduced-motion: reduce){ #ocean-net{ display:none; } }
     /* Hero */
     .hero{
+      .hero h1 {
+  background: linear-gradient(180deg, #eaf3ff 0%, #a8d1ff 60%, #75b5ff 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;           /* uses the gradient */
+  text-shadow: 0 6px 40px rgba(117,181,255,.22);
+        .hero h1 {
+  background: linear-gradient(180deg, #eaf3ff 0%, #a8d1ff 60%, #75b5ff 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;           /* uses the gradient */
+  text-shadow: 0 6px 40px rgba(117,181,255,.22);
+        }
+      }
       position:relative; overflow:hidden;
       padding: clamp(72px, 12vh, 120px) 0 clamp(48px, 8vh, 80px);
       isolation:isolate;
