--- a/index.html
+++ b/index.html
@@ -808,6 +808,8 @@ document.getElementById('reflect-btn')?.addEventListener('click', ()=>{
 
   const text = (v.value || '').trim();
   if(!text){
+    }); // close DOMContentLoaded
+  </script>
     out.textContent = '';
     return;
   }
