--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;]
+      margin:0;
       font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       background: radial-gradient(1200px 600px at 15% 10%, #0f1a28 0%, transparent 60%) ,
                   radial-gradient(1000px 500px at 80% 0%, #0c1624 0%, transparent 60%) ,
