--- a/index.html
+++ b/index.html
@@ -343,6 +343,27 @@
     .hero h1{
       font-size: clamp(34px, 6vw, 64px);
       line-height:1.05; margin:12px 0 16px; letter-spacing:.01em;
+      @keyframes oceanShift{
+  0%   { transform: translate3d(-2%,-1%,0) rotate(0deg)   scale(1.02); }
+  50%  { transform: translate3d( 1%, 2%,0) rotate(180deg) scale(1.05); }
+  100% { transform: translate3d( 3%,-2%,0) rotate(360deg) scale(1.02); }
+}
+
+@keyframes titleGlow{
+  0%,100%{
+    background-position:0% 0%;
+    text-shadow:0 6px 24px rgba(117,181,255,.30);
+  }
+  50%{
+    background-position:100% 100%;
+    text-shadow:0 10px 52px rgba(118,199,255,.55);
+  }
+}
+
+/* Accessibility: respect prefers-reduced-motion */
+@media (prefers-reduced-motion: reduce){
+  .hero::before, .hero h1{ animation:none; }
+}
     }
     .hero p.lede{
       color:var(--muted); max-width:880px; font-size: clamp(16px, 2.2vw, 20px)
