--- a/index.html
+++ b/index.html
@@ -34,18 +34,33 @@
 
   <style>
     :root{
-      --bg:#070b12;
-      --bg-2:#0b111a;
-      --ink:#eaf3ff;
-      --muted:#9ab4d1;
-      --brand:#76c7ff;
-      --glow:#2b84ff50;
-      --card:#0e1621;
-      --accent:#a8d1ff;
-      --ring:#2b84ff;
-      --link:#b8d8ff;
-      --success:#59ffa7;
-      --shadow: 0 20px 60px rgba(0,0,0,.45), 0 0 120px #1a396b30;
+  --bg:#070b12;
+  --bg-2:#0b111a;
+  --ink:#eaf3ff;
+  --muted:#97a9c6;
+  --brand:#4ea1ff;
+  --glow:#2b84ff55;
+  --card:#0e1621;
+  --accent:#a8d1ff;
+  --ring:#2b84ff;
+  --link:#8bd0ff;
+  --success:#5bff91;
+  --shadow: 0 20px 60px rgba(0,0,0,.45);
+    }
+    :root{
+  --bg:#051018;
+  --bg-2:#07141f;
+  --ink:#e8feff;
+  --muted:#9bd6e1;
+  --brand:#00c6ff;
+  --glow:#00e5ff55;
+  --card:#0a1c26;
+  --accent:#61f2ff;
+  --ring:#21d4fd;
+  --link:#67eaff;
+  --success:#59ffcb;
+  --shadow: 0 24px 80px rgba(0,40,60,.55);
+    }
    .hero {
   position: relative;
   text-align: center;
