--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
   font-size: clamp(34px, 6vw, 64px);
   line-height:1.05; margin:12px 0 0;
 }
+      /* Add to your existing .hero { ... } */
+position: relative;
+overflow: hidden;
+isolation: isolate;           /* keeps glow layers contained */
+perspective: 900px;           /* enables subtle 3D for child tilt */
+animation: ambientGlow 6s ease-in-out infinite; /* gentle breathing glow */
 .hero {
   position: relative;
   overflow: hidden;
