--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
   --success:#59ffcb;
   --shadow: 0 24px 80px rgba(0,40,60,.55);
     }
+    :root {
+  --glow: rgba(43,132,255,0.45);       /* ocean blue core */
+  --glow-cyan: rgba(0,224,255,0.45);   /* electric cyan accent */
+    }
    .hero {
   position: relative;
   text-align: center;
