--- a/index.html
+++ b/index.html
@@ -365,6 +365,10 @@ animation: ambientGlow 6s ease-in-out infinite; /* gentle breathing glow */
   0%,100% { box-shadow: 0 0 0 rgba(43,132,255,0); }
   50%     { box-shadow: 0 0 90px rgba(43,132,255,.18) inset; }
 }
+@keyframes glowShift {
+  0%, 100% { --glow: rgba(43,132,255,0.45); }
+  50%      { --glow: rgba(0,224,255,0.55); }
+}
 .hero .wrap { will-change: transform; transition: transform .25s ease; }
 .cta, .cta.ghost { position: relative; overflow: hidden; }
 .cta::after, .cta.ghost::after{
