--- a/index.html
+++ b/index.html
@@ -248,12 +248,19 @@
 @media (prefers-reduced-motion: reduce){ #ocean-net{ display:none; } }
     /* Hero */
     .hero{
+
 .hero h1{
-  /* animated gradient ink */
   background: linear-gradient(180deg,#eaf3ff 0%,#8ec5ff 60%,#eaf3ff 100%);
   -webkit-background-clip:text; background-clip:text;
   color: transparent;
-
+  background-size:200% 200%;
+  animation: titleGlow 8s ease-in-out infinite,
+             glowShift 14s ease-in-out infinite;
+  text-shadow: 0 0 24px var(--glow),
+               0 10px 60px rgba(0,80,160,.35);
+  font-size: clamp(34px, 6vw, 64px);
+  line-height:1.05; margin:12px 0 0;
+}
   /* motion + glow */
   background-size:200% 200%;
   animation:titleGlow 8s ease-in-out infinite;
