--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
   padding: 1rem;
   border-radius: 10px;
 }
-
+:root {
+  --glow: rgba(43,132,255,0.45);
+  --glow-cyan: rgba(0,224,255,0.45);
+}
 .cta-button {
   display: inline-block;
   margin-top: 25px;
