--- a/index.html
+++ b/index.html
@@ -128,6 +128,23 @@
       text-rendering:optimizeLegibility;
     }
     <body>
+    <!-- === Header Navigation === -->
+<header>
+  <nav class="nav">
+    <a class="brand" href="/">
+      <img src="assets/logo.svg" alt="Project Ocean">
+    </a>
+
+    <ul class="nav-links">
+      <li><a href="#mission">Mission</a></li>
+      <li><a href="#architecture">Architecture</a></li>
+      <li><a href="#team">Team</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+
+    <a class="cta" href="#invest">Request Investor Access</a>
+  </nav>
+</header>
   <canvas id="ocean-net" aria-hidden="true"></canvas>
   <section class="hero">
     <section class="hero">
