--- a/index.html
+++ b/index.html
@@ -117,7 +117,16 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
+  margin: 0;
+  font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+  background: radial-gradient(1200px 800px at 20% -10%, rgba(43,132,255,.10), transparent),
+              radial-gradient(1000px 700px at 110% -10%, rgba(43,132,255,.08), transparent),
+              var(--bg);
+  color: var(--ink);
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+    }
       font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       background: radial-gradient(1200px 600px at 15% 10%, #0f1a28 0%, transparent 60%) ,
                   radial-gradient(1000px 500px at 80% 0%, #0c1624 0%, transparent 60%) ,
