--- a/index.html
+++ b/index.html
@@ -127,7 +127,24 @@
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
     }
-      font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+      <!-- === Header Navigation === -->
+<header>
+  <nav class="nav">
+    <a class="brand" href="/">
+      <img src="assets/logo.svg" alt="Project Ocean" style="height:28px;">
+    </a>
+
+    <ul class="nav-links">
+      <li><a href="#mission">Mission</a></li>
+      <li><a href="#architecture">Architecture</a></li>
+      <li><a href="#poster">Poster</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+
+    <a class="cta" href="#invest">Request Investor Access</a>
+  </nav>
+</header>
+    font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       background: radial-gradient(1200px 600px at 15% 10%, #0f1a28 0%, transparent 60%) ,
                   radial-gradient(1000px 500px at 80% 0%, #0c1624 0%, transparent 60%) ,
                   var(--bg);
