--- a/index.html
+++ b/index.html
@@ -171,6 +171,21 @@
     <a class="cta" href="#invest">Request Investor Access</a>
   </nav>
 </header>
+    <!-- === Header Navigation === -->
+<header>
+  <nav class="nav">
+    <a class="brand" href="/">
+      <img src="assets/logo.svg" alt="Project Ocean" style="height:28px;">
+    </a>
+    <ul class="nav-links">
+      <li><a href="#mission">Mission</a></li>
+      <li><a href="#architecture">Architecture</a></li>
+      <li><a href="#poster">Poster</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+    <a class="cta" href="#invest">Request Investor Access</a>
+  </nav>
+</header>
   <canvas id="ocean-net" aria-hidden="true"></canvas>
   <section class="hero">
   <picture>
