--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
   color: #e8eefc;
 }
     /* Top nav */
+    /* Top nav */
+header{
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  background: linear-gradient(180deg, ...);
+  backdrop-filter: saturate(140%) blur(4px);
+}
 header{
   position: sticky;
   top: 0;
