--- a/index.html
+++ b/index.html
@@ -179,6 +179,98 @@
   color: #e8eefc;
 }
     /* Top nav */
+    /* Top nav — Ocean shimmer */
+header{
+  position: sticky; top: 0; z-index: 1000; width:100%;
+  /* entry fade */
+  opacity: 0; transform: translateY(-10px);
+  animation: navEnter .6s ease-out .2s forwards;
+
+  /* subtle base so content shows through */
+  background: rgba(7,11,18,.40);
+  backdrop-filter: saturate(140%) blur(4px);
+  -webkit-backdrop-filter: saturate(140%) blur(4px);
+  transition: background .35s ease, box-shadow .35s ease, backdrop-filter .35s ease;
+}
+
+/* When scrolled a bit, deepen the glass and add glow edge */
+header.scrolled{
+  background: rgba(7,11,18,.72);
+  backdrop-filter: saturate(150%) blur(10px);
+  -webkit-backdrop-filter: saturate(150%) blur(10px);
+  box-shadow:
+    0 10px 40px rgba(0,0,0,.35),
+    inset 0 -1px 0 #2b84ff33,
+    0 0 0 1px #2b84ff22;
+}
+
+/* nav layout */
+.nav{
+  display:flex; align-items:center; justify-content:space-between;
+  gap: 18px; padding: 14px 20px;
+}
+
+/* brand logo + pulse */
+.brand img, .brand{
+  display:flex; align-items:center; gap:10px; height: 28px;
+  filter: drop-shadow(0 0 10px var(--glow));
+  animation: logoPulse 4s ease-in-out infinite;
+  color: var(--ink); text-decoration:none;
+}
+
+/* links */
+.nav-links{ display:flex; gap:18px; list-style:none; margin:0; padding:0; }
+.nav-links a{
+  color: var(--ink); text-decoration:none; font-weight: 500;
+  position: relative; padding: 6px 8px;
+}
+.nav-links a::after{
+  content:""; position:absolute; left:0; right:0; bottom:2px; height:2px;
+  background: linear-gradient(90deg, transparent, #76c7ff, transparent);
+  transform: scaleX(0); transform-origin:left;
+  transition: transform .35s ease;
+}
+.nav-links a:hover::after{ transform: scaleX(1); }
+
+/* CTA button in nav */
+.cta{
+  display:inline-flex; align-items:center; gap:8px;
+  padding:10px 16px; border-radius:999px;
+  color:#fff; font-weight:600; text-decoration:none;
+  background: linear-gradient(180deg,#2b84ff,#1150cc);
+  box-shadow: 0 8px 28px #1150cc55,inset 0 0 0 1px #ffffff22;
+  transition: transform .12s ease, box-shadow .2s ease;
+}
+.cta:hover{ transform: translateY(-1px); box-shadow: 0 12px 36px #1150cc66,inset 0 0 0 1px #ffffff33; }
+
+/* shimmering light sweep across the whole nav */
+.nav::after{
+  content:""; position:absolute; inset:0 0 auto 0; height:100%;
+  background: linear-gradient(110deg, transparent 35%, #9ad5ff33 50%, transparent 65%);
+  pointer-events:none; mix-blend-mode:screen; opacity:.0;
+  animation: shimmerSweep 8s linear infinite;
+}
+
+/* keyframes */
+@keyframes navEnter{ to{ opacity:1; transform:none; } }
+@keyframes logoPulse{
+  0%,100%{ filter: drop-shadow(0 0 8px var(--glow)); }
+  50%{    filter: drop-shadow(0 0 16px var(--glow)); }
+}
+@keyframes shimmerSweep{
+  0%{ opacity:.0; transform: translateX(-40%); }
+  10%{ opacity:.25; }
+  40%{ opacity:.25; transform: translateX(40%); }
+  60%{ opacity:.0; }
+  100%{ transform: translateX(120%); }
+}
+
+/* prefers-reduced-motion: no flashy stuff */
+@media (prefers-reduced-motion: reduce){
+  header{ animation:none; }
+  .brand{ animation:none; }
+  .nav::after{ display:none; }
+}
     /* Top nav */
 header{
   position: sticky;
