--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,12 @@ animation: ambientGlow 6s ease-in-out infinite; /* gentle breathing glow */
         <img src="assets/avatar.jpg" alt="Photo of Sarah Carmody" loading="lazy">
       </figure>
     </div>
+    <script>
+// Ocean neural net background
+(() => {
+  ...
+})();
+    </script>
 // Ocean neural net background
 (()=>{ 
   const cvs = document.getElementById('ocean-net'); if(!cvs) return;
