--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ header.scrolled{
 .nav-links a:hover::after{ transform: scaleX(1); }
 
 /* CTA button in nav */
-.cta{
+.nav .cta{
   display:inline-flex; align-items:center; gap:8px;
   padding:10px 16px; border-radius:999px;
   color:#fff; font-weight:600; text-decoration:none;
@@ -227,7 +227,7 @@ header.scrolled{
   box-shadow: 0 8px 28px #1150cc55,inset 0 0 0 1px #ffffff22;
   transition: transform .12s ease, box-shadow .2s ease;
 }
-.cta:hover{ transform: translateY(-1px); box-shadow: 0 12px 36px #1150cc66,inset 0 0 0 1px #ffffff33; }
+.nav .cta:hover{ transform: translateY(-1px); box-shadow: 0 12px 36px #1150cc66,inset 0 0 0 1px #ffffff33; }
 
 /* shimmering light sweep across the whole nav */
 .nav::after{
